# cbt-slack-bot

./: .gitignore  LICENSE  Makefile  README.md  TODO.org  advent.md  cbt-bot.bib  cbt-bot.md  cbt-slack-bot.cabal  stack.yaml
app/: Main.hs
src/: Fsm.hs  Lib.hs
test/: FsmSpec.hs  Spec.hs  hello-yampa.golden  io-yampa.golden  stm-yampa.golden  stm-yampa.in
