name:                cbt-slack-bot
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/cbt-slack-bot#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
extra-source-files: test/hello.golden
                  , test/hello-yampa.golden


-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/cbt-slack-bot#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Lib

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , websockets
                     , text
                     , url
                     , lens
                     , wreq
                     , wuss
                     , unordered-containers
                     , Yampa >= 0.10.6
  default-language:    Haskell2010

executable cbt-slack-bot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , cbt-slack-bot
  default-language:    Haskell2010

test-suite cbt-slack-bot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tasty >= 0.7
                     , tasty-hunit >= 0.9
                     , tasty-quickcheck >= 0.8
                     , tasty-smallcheck >= 0.8
                     , tasty-golden >= 2.3.1
                     , cbt-slack-bot
                     , Yampa >= 0.10.6
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/cbt-slack-bot
